# gazebo-cpu-lidar

./: .gitignore  AGENTS.md  CPU_LIDAR_OPTIMIZATION.md  README.md  build.bash  dev.bash  docker-compose.yml  gz-jetty.repos  setup.bash
docker/: Dockerfile  entrypoint.bash
docs/: cpu-lidar-analysis.md  cpu-lidar-tdd-plan.md
ros_ws/: test_headless.bash
ros_ws/src/cpu_lidar_demo/: CMakeLists.txt  README.md  package.xml
ros_ws/src/cpu_lidar_demo/config/: bridge.yaml
ros_ws/src/cpu_lidar_demo/launch/: lidar_demo.launch.py
ros_ws/src/cpu_lidar_demo/rviz/: lidar.rviz
ros_ws/src/cpu_lidar_demo/worlds/: cpu_lidar_demo.sdf  cpu_lidar_hard_headless.sdf  gpu_lidar_demo.sdf  gpu_lidar_hard_headless.sdf
